minor layout bug fixed

--- a/notify-me-app/src/components/HomepageComponents/Homepage/style/style.scss
+++ b/notify-me-app/src/components/HomepageComponents/Homepage/style/style.scss
@@ -14,7 +14,7 @@
 
   display: grid;
   grid-template-rows: 1fr;
-  grid-template-columns: 1.8fr 1fr;
+  grid-template-columns: 1.5fr 1fr;
 }
 
 .homepage-banner-col {
@@ -55,8 +55,8 @@
   }
 
   .homepage-login-col {
-    height: 85vh;
-    width: 80%;
+    height: 90vh;
+    width: 70%;
     margin: 0 auto;
   }
 }
