--- a/notify-me-app/src/components/HomepageComponents/LoginForm/style/style.scss
+++ b/notify-me-app/src/components/HomepageComponents/LoginForm/style/style.scss
@@ -2,14 +2,14 @@
 @import "../../../../style//helper_styles//breakpoints";
 
 .login-form-wrapper {
-  height: 85%;
+  height: 88%;
   width: 80%;
   margin: 0 auto;
   margin-top: 1em;
   background-color: $form_background;
   border: 2px solid $primary;
   border-radius: 1em;
-  padding: 2em 2.5em;
+  padding: 1.5em 2.5em;
 
   display: flex;
   flex-direction: column;
